--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,9 +1,158 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MenuActivity">
+    >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <Spinner
+                    android:id="@+id/xlmenu"
+                    android:textSize="30sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:spinnerMode="dialog"
+                    android:textColor="@color/snow" />
+                <Spinner
+                    android:id="@+id/ckmenu"
+                    android:textSize="30sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:spinnerMode="dialog"
+                    android:textColor="@color/snow" />
+            </LinearLayout>
+            <TextView
+                android:id="@+id/tvShowDialog"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_weight="1"
+
+                android:gravity="center_horizontal|center_vertical"
+                android:text="日期"
+                android:textColor="@color/black"
+                android:textSize="28sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+
+
+    <LinearLayout
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+
+        <Button
+            android:id="@+id/JHBtn"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:textSize="30dp"
+            android:layout_weight="1"
+            android:background="@color/bgc"
+            android:textColor="@color/snow"
+            android:text="拣货"
+            />
+
+        <Button
+            android:textSize="30dp"
+            android:id="@+id/ZXBtn"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:background="@color/bgc"
+            android:textColor="@color/snow"
+            android:text="装车"
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+
+        <Button
+            android:textSize="30dp"
+            android:id="@+id/CXBtn"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="查询拣货"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:background="@color/bgc"
+            android:textColor="@color/snow"
+            />
+
+        <Button
+            android:textSize="30dp"
+            android:id="@+id/CXZCBtn"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="查询装车"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:background="@color/bgc"
+            android:textColor="@color/snow" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <Button
+            android:id="@+id/WJHBtn"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:background="@color/bgc"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="查询单据"
+            android:textColor="@color/snow"
+            android:textSize="30dp" />
+
+        <Button
+            android:textSize="30dp"
+            android:id="@+id/ReturnLogin"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:background="@color/bgc"
+            android:text="退出登录"
+            android:textColor="@color/snow"
+            />
+
+    </LinearLayout>
+</LinearLayout>
+
+
